templates/k8tz_template.yaml
---
# Source: k8tz/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8tz
  labels:
    k8tz.io/controller-namespace: "true"
    helm.sh/chart: k8tz-0.16.0
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.16.0"
    app.kubernetes.io/managed-by: Helm
---
# Source: k8tz/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name
  namespace: k8tz
  labels:
    helm.sh/chart: k8tz-0.16.0
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: release-name
---
# Source: k8tz/templates/controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-k8tz
  namespace: k8tz
  labels:
    helm.sh/chart: k8tz-0.16.0
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: k8tz
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/config: e1d0856c53be8d326380a2a594d601be4eb56d73c25fbf43903da39dc909e88e
      labels:
        app.kubernetes.io/name: k8tz
        app.kubernetes.io/instance: release-name
    spec:
      volumes:
      - name: tls
        secret:
          secretName: release-name-k8tz-tls
      serviceAccountName: release-name-k8tz
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: k8tz
          args:
          - "webhook"
          - "--timezone"
          - "UTC"
          - "--injection-strategy"
          - "initContainer"
          - "--inject=true"
          - "--container-name=k8tz"
          - "--bootstrap-image"
          - "quay.io/k8tz/k8tz:0.16.0"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          image: "quay.io/k8tz/k8tz:0.16.0"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: tls
              mountPath: /run/secrets/tls
              readOnly: true
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: https
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /health
              port: https
              scheme: HTTPS
          resources:
            {}
---
# Source: k8tz/templates/admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-k8tz
  labels:
    helm.sh/chart: k8tz-0.16.0
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.16.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: admission-controller.k8tz.io
    namespaceSelector:
      matchExpressions:
      - key: k8tz.io/controller-namespace
        operator: NotIn
        values: ["true"]
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - k8tz
        - kube-system
    sideEffects: None
    failurePolicy: Fail
    admissionReviewVersions: ["v1", "v1beta1"]
    clientConfig:
      service:
        name: release-name
        namespace: k8tz
        path: "/"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQVBobWZOcXRHTEZsTjJXdXRyZ0hGdjB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVmNtVnNaV0Z6WlMxdVlXMWxMbXM0ZEhvdWMzWmpNQjRYRFRJME1EVXhOREl6TXpjMQpNbG9YRFRNNE1EVXhOVEl6TXpjMU1sb3dJREVlTUJ3R0ExVUVBeE1WY21Wc1pXRnpaUzF1WVcxbExtczRkSG91CmMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTR5VjNaUXlkYXp1WlIvS1EKb1lnd0tNS1k3OFhPZjFxa2hVWGVkRTIvKzc4bW1DTjNqTVJHMlR5TnlMcGJNVzZXem5KZlAranE5R1pzSTF5UwpmMDdsOUc3dnN5 [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
      - operations: [ "CREATE" ]
        apiGroups: ["batch"]
        apiVersions: ["v1"]
        resources: ["cronjobs"]
---
# Source: k8tz/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-k8tz-health-test"
  namespace: k8tz
  labels:
    helm.sh/chart: k8tz-0.16.0
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: curl
      image: curlimages/curl:7.78.0
      args: ['--insecure', 'https://release-name:443/health']
  restartPolicy: Never
